# trade-indexer

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
src/: aidols_state.rs  aidols_trade_detection.rs  grafun_state.rs  grafun_trade_detection.rs  intear_dex_types.rs  intear_plach_trade_detection.rs  lib.rs  main.rs  meme_cooking_deposit_detection.rs  redis_handler.rs  ref_finance_state.rs  ref_trade_detection.rs  refdcl_trade_detection.rs  tests.rs  veax_state.rs  veax_trade_detection.rs
